placeholders for server-client transaction

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,8 @@
     <script src="/static/js/owl.carousel.min.js"></script>
     <!--CUSTOM JS-->
     <script src="/static/js/custom.js"></script>
+    <!--CUSTOM UPLOAD/DOWNLOAD JS-->
+    <script src="/static/js/upload.js"></script>
 </body>
 
 </html>
