--- a/templates/index.html
+++ b/templates/index.html
@@ -134,52 +134,58 @@
     <div class="container">
         <div class="row mt-4 work-filter">
             <div class="col-lg-4 work_item webdesign wordpress">
-                <a href="/static/images/works/1.jpg" class="img-zoom">
+                <div class="img-fluid">
                     <div class="work_box">
                         <div class="work_img">
                             <img src="/static/images/works/1.jpg" class="img-fluid mx-auto d-block rounded"
                                 alt="work-img">
                         </div>
                         <div class="work_detail">
-                            <div class="mb-2"><button type="button" class="btn btn-outline-light">View Dataset</button>
+                            <div class="mb-2"><a class="btn btn-outline-light"
+                                    href="https://storage.googleapis.com/openimages/web/index.html" target="_blank">View
+                                    Dataset</a>
                             </div>
-                            <div class="mb-2"><button class="btn btn-outline-light" type="button">Download
-                                    Experts</button></div>
+                            <div class="mb-2"><a class="btn btn-outline-light" href="/download_coco_experts.sh"
+                                    target="_blank">Download
+                                    Experts</a>
+                            </div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 work_item webdesign wordpress">
-                <a href="/static/images/works/1.jpg" class="img-zoom">
+                <div class="img-fluid">
                     <div class="work_box">
                         <div class="work_img">
                             <img src="/static/images/works/2.jpg" class="img-fluid mx-auto d-block rounded"
                                 alt="work-img">
                         </div>
                         <div class="work_detail">
-                            <div class="mb-2"><button type="button" class="btn btn-outline-light">View Dataset</button>
+                            <div class="mb-2"><a class="btn btn-outline-light" href="http://cocodataset.org/"
+                                    target="_blank">View Dataset</a>
                             </div>
                             <div class="mb-2"><button class="btn btn-outline-light" type="button">Download
                                     Experts</button></div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
             <div class="col-lg-4 work_item webdesign wordpress">
-                <a href="/static/images/works/1.jpg" class="img-zoom">
+                <div class="img-fluid">
                     <div class="work_box">
                         <div class="work_img">
                             <img src="/static/images/works/3.jpg" class="img-fluid mx-auto d-block rounded"
                                 alt="work-img">
                         </div>
                         <div class="work_detail">
-                            <div class="mb-2"><button type="button" class="btn btn-outline-light">View Dataset</button>
+                            <div class="mb-2"><a class="btn btn-outline-light" href="http://www.image-net.org/"
+                                    target="_blank">View Dataset</a>
                             </div>
                             <div class="mb-2"><button class="btn btn-outline-light" type="button">Download
                                     Experts</button></div>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
 
             <!-- <div class="col-lg-4 work_item devlopment webdesign">
@@ -210,7 +216,8 @@
                     <h2>2. Adapt Your Dataset</h2>
                 </div>
                 <div class="text-center mt-4">
-                    <a href="#" class="btn btn-custom">Download Fast Adaptation Script</a>
+                    <a href="/fast_adapt.sh" target="_blank" class="btn btn-custom">Download Fast Adaptation
+                        Script</a>
                     <p class="text-muted mt-2">TODO: Instructions on running fast adaptation script and expert model
                         download</p>
                 </div>
@@ -237,20 +244,20 @@
             <div class="col-lg-12">
                 <div class="form-kerri contact_form">
                     <div id="message"></div>
-                    <form method="post" action="php/contact.php" name="contact-form" id="working_form">
+                    <form method="post" name="upload-form" id="upload-form" enctype="multipart/form-data">
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-group mt-2">
-                                    <label for="exampleFormControlFile1">Upload z.pickle</label>
-                                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                                    <label for="upload-file-form">Upload z.pickle</label>
+                                    <input name="file" type="file" class="form-control-file" id="upload-file-form">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-group mt-2">
-                                    <label for="exampleFormControlSelect1">Source Dataset</label>
-                                    <select class="form-control" id="exampleFormControlSelect1">
+                                    <label for="select-dataset">Source Dataset</label>
+                                    <select class="form-control" id="select-dataset">
                                         <option>ImageNet</option>
                                         <option>COCO</option>
                                         <option>OpenImages</option>
@@ -260,8 +267,9 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <input type="submit" id="submit" name="send"
-                                    class="submitBnt btn btn-custom text-uppercase" value="Download">
+                                <button id="upload-btn" class="submitBnt btn btn-custom text-uppercase" type="button">Upload</button>
+                                <!-- <input type="submit" class="submitBnt btn btn-custom text-uppercase" value="Upload"> -->
+                                <button id="download-btn" class="submitBnt btn btn-custom text-uppercase" disabled=True type="button">Download</button>
                                 <div id="simple-msg"></div>
                             </div>
                         </div>
