download instead of open

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
                                     Dataset</a>
                             </div>
                             <div class="mb-2"><a class="btn btn-outline-light" href="/download_coco_experts.sh"
-                                    target="_blank">Download
+                                    target="_blank" download="download_coco_experts.sh">Download
                                     Experts</a>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                     <h2>2. Adapt Your Dataset</h2>
                 </div>
                 <div class="text-center mt-4">
-                    <a href="/fast_adapt.sh" target="_blank" class="btn btn-custom">Download Fast Adaptation
+                    <a href="/fast_adapt.sh" target="_blank" class="btn btn-custom" download="fast_adapt.sh">Download Fast Adaptation
                         Script</a>
                     <p class="text-muted mt-2">TODO: Instructions on running fast adaptation script and expert model
                         download</p>
