--- a/static/css/style.css
+++ b/static/css/style.css
@@ -644,3 +644,20 @@ button:focus {
     }
 }
 
+/*======================
+        12. D3.JS
+========================*/
+.links line {
+    stroke: #999;
+    stroke-opacity: 0.6;
+  }
+  
+  .nodes circle {
+    stroke: #fff;
+    stroke-width: 2px;
+  }
+  
+  text {
+    font-family: sans-serif;
+    font-size: 14px;
+  }
