--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,10 @@
     <script src="/static/js/custom.js"></script>
     <!--CUSTOM UPLOAD/DOWNLOAD JS-->
     <script src="/static/js/upload.js"></script>
+    <!--D3.js-->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!--CUSTOM FORCE DIRECTED D3 GRAPH JS-->
+    <script src="/static/js/graph.js"></script>
 </body>
 
 </html>
