--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="text-center header-content mx-auto">
-                            <h1 class="header-name text-white text-capitalize mb-0">AI Data Server<span
+                            <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
                             <p class="text-white mx-auto header-desc mt-4">What Data is Useful for my Data: <br>
                                 Transfer Learning with a Mixture of Self-Supervised Experts</p>
@@ -229,7 +229,7 @@
 <!-- END FAST ADAPTATION -->
 
 
-<!-- START CONTACT -->
+<!-- START DOWNLOAD -->
 <section class="section bg-light" id="download-subset">
     <div class="container">
         <div class="row justify-content-center">
@@ -254,7 +254,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-group mt-2">
                                     <label for="select-dataset">Source Dataset</label>
@@ -265,7 +265,7 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <button id="upload-btn" class="submitBnt btn btn-custom text-uppercase" type="button">Upload</button>
@@ -277,6 +277,11 @@
                         </div>
                     </form>
                 </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-lg-12">
+                <svg width="960" height="600"></svg>
             </div>
         </div>
     </div>
