finish visualize, start outputting filepaths

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,6 +85,7 @@
     <script src="/static/js/upload.js"></script>
     <!--D3.js-->
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <!--CUSTOM FORCE DIRECTED D3 GRAPH JS-->
     <script src="/static/js/graph.js"></script>
 </body>
