--- a/static/css/style.css
+++ b/static/css/style.css
@@ -658,6 +658,10 @@ button:focus {
   }
   
   text {
+    stroke: #fff;
+    paint-order: stroke;
+    stroke-width: 1.5px;
     font-family: sans-serif;
+    font-weight: 500;
     font-size: 14px;
   }
