--- a/templates/index.html
+++ b/templates/index.html
@@ -253,7 +253,7 @@
                                     type="button">Upload & Visualize</button>
                                 <!-- <input type="submit" class="submitBnt btn btn-custom text-uppercase" value="Upload"> -->
                                 <button id="download-btn" class="submitBnt btn btn-custom text-uppercase" disabled=True
-                                    type="button" onclick="window.open('download-zip')">Download</button>
+                                    type="button">Download</button>
                                 <div id="simple-msg"></div>
                             </div>
                         </div>
