--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
-    <link rel="shortcut icon" href="/static/images/favicon.ico?v=2">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
 
     <!--Bootstrap Css-->
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
