--- a/templates/index.html
+++ b/templates/index.html
@@ -202,10 +202,11 @@
                     <h2>2. Adapt Your Dataset</h2>
                 </div>
                 <div class="text-center mt-4">
-                    <a href="/NeuralDataServer_ClientFastAdapt.ipynb" target="_blank" class="btn btn-custom" download="NeuralDataServer_ClientFastAdapt.ipynb"> Fast Adapt Colab Notebook</a>
+                    <!-- <a href="/NeuralDataServer_ClientFastAdapt.ipynb" target="_blank" class="btn btn-custom" download="NeuralDataServer_ClientFastAdapt.ipynb"> Fast Adapt Colab Notebook</a> -->
+                    <a href="https://colab.research.google.com/drive/1X2BvoQcaFWDKTov6zOwVtaa7O9eBlQE3" target="_blank" class="btn btn-custom" download="NeuralDataServer_ClientFastAdapt.ipynb"> Fast Adapt Colab Notebook</a>
                     <p class="text-muted mt-2">Option 1: Download and open the notebook in Colab to download and adapt experts</p>
                     <br>
-                    <a href="https://github.com/yanxi0830/fast-adapt" target="_blank" class="btn btn-custom" download="NeuralDataServer_ClientFastAdapt.ipynb"> Fast Adapt Local Script</a>
+                    <a href="https://github.com/yanxi0830/NeuralDataServer-FastAdapt" target="_blank" class="btn btn-custom" download="NeuralDataServer_ClientFastAdapt.ipynb"> Fast Adapt Local Script</a>
                     <p class="text-muted mt-2">Option 2: Download experts and adapt to your dataset locally </p>
                 </div>
             </div>
