--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Server</title>
+    <title>Neural Data Server</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -52,7 +52,7 @@
                             </li>
                             <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li>
                         </ul> -->
-                        <p class="text-muted mb-0">&copy; Copyright | 2019 All Right Reserved</p>
+                        <p class="text-muted mb-0"> Copyright &copy; Neural Data Server 2019</p>
                     </div>
                 </div>
             </div>
