--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                             </li>
                             <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li>
                         </ul> -->
-                        <p class="text-muted mb-0"> Copyright &copy; Neural Data Server 2019</p>
+                        <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
                     </div>
                 </div>
             </div>
