--- a/templates/index.html
+++ b/templates/index.html
@@ -257,7 +257,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="form-group mt-2">
-                                    <label for="upload-file-form">Upload z.pickle</label>
+                                    <label for="upload-file-form">Upload transfer.pkl</label>
                                     <input name="file" type="file" class="form-control-file" id="upload-file-form">
                                 </div>
                             </div>
@@ -276,8 +276,15 @@
                                     type="button">Upload & Visualize</button>
                                 <!-- <input type="submit" class="submitBnt btn btn-custom text-uppercase" value="Upload"> -->
                                 <button id="download-btn" class="submitBnt btn btn-custom text-uppercase" disabled=True
-                                    type="button">Download</button>
-                                <div id="simple-msg"></div>
+                                    type="button" data-toggle="tooltip" data-placement="bottom" title="We do not host datasets on our server,
+                                    clicking Download will give you a JSON
+                                    file containing image filenames prefixed by their dataset.">Download</button>
+                                <div id="simple-msg">
+                                </div>
+                                <br>
+                                <!-- <p style="text-align: left; font-size: 90%;">* We do not host datasets on our server,
+                                    clicking Download will give you a JSON
+                                    file containing image filenames prefixed by their dataset. </p> -->
                             </div>
                         </div>
                     </form>
@@ -288,15 +295,19 @@
             <div class="col-lg-12">
                 <svg width="960" height="650"></svg>
             </div>
+            <p>Force Directed Graph of dataset clusters, showing transfer performance measured by fast adaptation
+                for each dataset
+                clusters. The centre node represents target dataset, the width and distance of each edge represent is
+                related to how relevant the source cluster is related to the target dataset (closer=better).</p>
         </div>
     </div>
 </section>
-<section class="section" id="link-own-dataset">
+<section class="section bg-light" id="link-own-dataset">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2>Team</h2>
+                    <img src="/static/images/uoft.png" style="width: 20%;"></img>
                 </div>
             </div>
         </div>
