--- a/templates/index.html
+++ b/templates/index.html
@@ -193,6 +193,9 @@
             <p style="text-align: left; font-size: 90%;">* Licenses presented are for each dataset. We make no
                 warranties regarding the license
                 status of images in each dataset and you should verify the license for each image yourself.</p>
+            <br><br><br><br>
+            <p style="text-align: left;">Want to submit a dataset? <a href="https://forms.gle/5GYFuSZ1emjQGwKH7">Let us
+                know!</a></p>
         </div>
     </div>
 </section>
@@ -307,6 +310,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
+                    <br>
                     <img src="/static/images/uoft.png" style="width: 20%;"></img>
                 </div>
             </div>
