--- a/templates/index.html
+++ b/templates/index.html
@@ -92,10 +92,15 @@
                     we present Neural Data Server, a web-service allowing clients (target application with its own small
                     labeled dataset)
                     to fetch subset of data that is most relevant to their own target domains. </p>
-                <p class="text-muted mt-2">TODO: GIF/Video</p>
+                <!-- <p class="text-muted mt-2">TODO: GIF/Video</p> -->
                 <br>
-                <div class="mt-3">
-                    <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block">
+                <div class="mt-3 text-center">
+                    <video width="80%" controls>
+                        <source src="/static/images/NeuralDataServer.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <br>
+                    <!-- <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block"> -->
                 </div>
             </div>
         </div>
@@ -195,7 +200,7 @@
                 status of images in each dataset and you should verify the license for each image yourself.</p>
             <br><br><br><br>
             <p style="text-align: left;">Want to submit a dataset? <a href="https://forms.gle/5GYFuSZ1emjQGwKH7">Let us
-                know!</a></p>
+                    know!</a></p>
         </div>
     </div>
 </section>
