--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
                     we present Neural Data Server, a web-service allowing clients (target application with its own small
                     labeled dataset)
                     to fetch subset of data that is most relevant to their own target domains. </p>
-                <!-- <p class="text-muted mt-2">TODO: GIF/Video</p> -->
+                <p class="text-muted mt-2">Watch the short video below on how it works.</p>
                 <br>
                 <div class="mt-3 text-center">
                     <video width="80%" controls>
