--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#download-subset">Download Subset</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="paper.html">Paper</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -59,7 +62,8 @@
                         <div class="text-center header-content mx-auto">
                             <h1 class="header-name text-white text-capitalize mb-0">Neural Data Server<span
                                     class="font-weight-bold" data-elements=""></span></h1>
-                            <p class="text-white mx-auto header-desc mt-4">Find Best Data to Pre-Train Your Deep Models
+                            <p class="text-white mx-auto header-desc mt-4">Find Best Data to Pre-Train Your Deep Neural
+                                Models
                             </p>
                             <div class="mt-4 pt-2">
                                 <a class="btn btn-outline-custom btn-round" href="#abstract">Learn More</a>
@@ -89,9 +93,11 @@
                     on the target domain. In the new era of ever increasing number of
                     massive datasets, selecting the relevant pre-training data itself is a critical issue. To address
                     this,
-                    we present Neural Data Server, a web-service allowing clients (target application with its own small
-                    labeled dataset)
-                    to fetch subset of data that is most relevant to their own target domains. </p>
+                    we present Neural Data Server, a web-service allowing target application with its own small
+                    labeled dataset
+                    to fetch subset of data that is most relevant to their own target domains. Neural Data Server
+                    indexes several popular Machine Learning datasets in its quest to server optimal data to ML users.
+                </p>
                 <p class="text-muted mt-2">Watch the short video below on how it works.</p>
                 <br>
                 <div class="mt-3 text-center">
@@ -102,6 +108,17 @@
                     <br>
                     <!-- <img src="/static/images/server-client.png" alt="" class="img-fluid mx-auto d-block"> -->
                 </div>
+                <br>
+                <p class="text-muted mt-2"><b>* We do not host datasets. </b>In NDS we provide links to examples in
+                    existing datasets. These examples are carefully chosen for your own data and task. Below each
+                    dataset we provide the license information. Please contact each dataset’s original provider for any
+                    questions/licensing.</p>
+                <br>
+                <p class="text-muted mt-2"><b> ** Terms of Use: </b>NDS is a free service. By using NDS, in addition to
+                    respecting
+                    the original dataset
+                    licenses, you agree that the data suggested to you by NDS will not be used in offensive or
+                    non-ethical A.I. applications.</p>
             </div>
         </div>
     </div>
@@ -114,8 +131,9 @@
         <div class="row justify-content-center">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <h2>1. Dataset <span class="font-weight-bold">Experts</span></h2>
-                    <p class="text-muted mx-auto section-subtitle mt-3">Browse datasets you want to use</p>
+                    <h2>1. NDS <span class="font-weight-bold">Dataset Registry</span></h2>
+                    <p class="text-muted mx-auto section-subtitle mt-3">Check out our dataset registry and download
+                        experts</p>
                 </div>
             </div>
         </div>
@@ -153,6 +171,7 @@
                             <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div> -->
                     </div>
+                    <p><a href="https://storage.googleapis.com/openimages/web/index.html">View Dataset</a></p>
                     <p><b>License: </b>CC-by 4.0</p>
                 </div>
             </div>
@@ -174,6 +193,7 @@
                             </div>
                         </div>
                     </div>
+                    <p><a href="http://cocodataset.org/#home">View Dataset</a></p>
                     <p><b>License: </b>CC-by 4.0</p>
                 </div>
             </div>
@@ -192,15 +212,16 @@
                                     Experts</button></div>
                         </div>
                     </div>
+                    <p><a href="http://www.image-net.org/">View Dataset</a></p>
                     <p><b>Copyright: </b><a href="http://image-net.org/download-faq">Terms</a></p>
                 </div>
             </div>
-            <p style="text-align: left; font-size: 90%;">* Licenses presented are for each dataset. We make no
+            <p style="text-align: left; font-size: 80%;">* Licenses presented are for each dataset. We make no
                 warranties regarding the license
                 status of images in each dataset and you should verify the license for each image yourself.</p>
             <br><br><br><br>
-            <p style="text-align: left;">Want to submit a dataset? <a href="https://forms.gle/5GYFuSZ1emjQGwKH7">Let us
-                    know!</a></p>
+            <p style="text-align: left;"><b>Contribute:</b> Help grow NDS dataset registry by registering your dataset.
+                <a href="https://forms.gle/5GYFuSZ1emjQGwKH7">Please see instructions.</a></p>
         </div>
     </div>
 </section>
@@ -310,17 +331,41 @@
         </div>
     </div>
 </section>
-<section class="section bg-light" id="link-own-dataset">
+<!-- <section class="section bg-light" id="link-own-dataset">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center">
-                    <br>
-                    <img src="/static/images/uoft.png" style="width: 20%;"></img>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</section> -->
+<div class="text-center bg-light col-lg-12">
+    <img src="/static/images/uoft.png" style="width: 15%;"></img>
+    <img src="/static/images/vector.png" style="width: 15%;"></img>
+</div>
 <!-- END CONTACT -->
+<!--START FOOTER-->
+<footer class="footer bg-light" style="height: 0px;">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-md-12">
+                <div class="text-center text-white footer-alt">
+                    <!-- <ul class="list-unstyled list-inline mb-3">
+                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook text-muted"></i></a>
+                            </li>
+                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin text-muted"></i></a>
+                            </li>
+                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-pinterest text-muted"></i></a>
+                            </li>
+                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter text-muted"></i></a></li>
+                        </ul> -->
+                    <p class="text-muted mb-0"> Copyright &copy; University of Toronto 2019</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--END FOOTER-->
 {% endblock %}
